# linguanodon

./: .cursorrules  .gitignore  CLAUDE.md  README.md  arabicnumbers.sqlite3  boringwords.sqlite3  comprehensible_input.sqlite3  developer-instructions.md  egyptiansentences.sqlite3  eslint.config.js  hebrewscript.sqlite3  index.html  jsconfig.json  package-lock.json  package.json  prepositions3d.sqlite3  pyproject.toml  saetze.sqlite3  tprboard.sqlite3  tsconfig.app.json  viettonepractice.sqlite3  vite.config.ts
public/: 000_common_english_sentences_as_apc_resource_sets.py  001_levantine_words.py  002_levanti_dataset_sentences_as_immersion_content.py  003_yt_as_immersion_content.py  004_lisaanmasry_examples.py  004_lisaanmasry_examples_as_immersion_content.py.py  004b_lisaanmasry_space_fixer.py  005_integrate_tatoeba_sentences.py  006_vocab_with_img_and_sound_mandarin.py  007_mandarin_character_deck.py  008_vocab_with_img_and_sound_generalized.py  037_lisaanmasry_scraper.py  dev_requirements.txt  pyproject.toml
public/data/: languages.json
public/data/apc/: index.json  natural_sentences_1.json  natural_sentences_2.json  translate_sentence__دورت_عليه_ما_لقيتوش__.json  youtube_71Bj9alSWt4.json  (+11 more)
public/data_in/: apc_ar.txt  chinese_translations.json  chinese_words_tone_matches.json  links.json  mulan_table.html
public/inspo/: 13_conv_to_linguanodon_format.py  14_conv_to_new_linguanodon_format.py  convert_to_format.py  old_lisaanmasry_scraper.py  old_lisaanmasry_scraper_doc.md  scrape_tatoeba.py
public/sets/: index.json
public/vocab_sets/: 1000_common_levantine.json
(+3068 files in other folders)
