[project]
name = "linguanodon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "gunicorn>=23.0",
    "psycopg[binary]>=3.2",
    "dj-database-url>=2.3",
    "whitenoise>=6.9",
    "python-dotenv>=1.2.2",
    "iso639-lang>=2.6.3",
]
