[project]
name = "public"
version = "0.1.0"
description = ""
authors = [
    {name = "Kolja Sam",email = "github@koljapluemer.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "youtube-transcript-api (==1.2.2)",
    "openai (==1.100.2)",
    "dotenv (==0.9.9)",
    "selenium (>=4.35.0,<5.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "deepl (>=1.22.0,<2.0.0)",
    "pexels-api (>=1.0.1,<2.0.0)",
    "pexels-api-py (>=0.0.5,<0.0.6)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
